--- a/styles.css
+++ b/styles.css
@@ -25,6 +25,9 @@ a {
 }
 
 .card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   position: relative;
   background: rgba(0,0,0,0.75);
   padding: 30px;
