--- a/styles.css
+++ b/styles.css
@@ -134,7 +134,13 @@ input {
   width: 160px;          /* tamanho controlado */
   margin-bottom: 20px;  /* espaço até os inputs */
   opacity: 0.95;
+  filter: drop-shadow(0 0 20px rgba(168,85,247,0.5));
 }
 .card input {
   width: 100%;
+}
+@media (max-width: 768px) {
+  .perso {
+    width: 120px;
+  }
 }
