--- a/lobby.css
+++ b/lobby.css
@@ -31,11 +31,18 @@ body {
 }
 
 .logo {
-  font-size: 22px;
+  align-items: center;
+  gap: 8px;
+  display: flex;
+  font-size: 1.4rem;
   font-weight: bold;
   color: #e0b15c;
 }
-
+.logo-img {
+  width: 40px;
+  height: 40px;
+  object-fit: contain;
+}
 .user-info {
   text-align: center;
   font-size: 14px;
