--- a/lobby.css
+++ b/lobby.css
@@ -34,7 +34,7 @@ body {
   align-items: center;
   gap: 8px;
   display: flex;
-  font-size: 2.4rem;
+  font-size: 10px;
   font-weight: bold;
   color: #e0b15c;
 }
