--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,8 @@ body {
   margin: 0;
   background-image: url("chat.png");
   background-size: 100%;
+  background-repeat: no-repeat;
+  background-size: 100%;
   color: #000000;
 }
 
