--- a/lobby.css
+++ b/lobby.css
@@ -106,16 +106,36 @@ body {
   border: 1px solid rgba(224, 177, 92, 0.25);
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.6);
   transition: transform 0.25s, box-shadow 0.25s;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.Coringa {
+  width: 120px;
+  height: 120px;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  margin-bottom: 12px;
+}
+
+/* IMAGEM */
+.Coringa img {
+  max-width: 100%;
+  max-height: 100%;
+  object-fit: contain;
 }
 
 .game-card:hover {
   transform: translateY(-6px) scale(1.02);
   box-shadow: 0 0 25px rgba(224, 177, 92, 0.4);
 }
-
 .game-card .icon {
-  font-size: 42px;
-  margin-bottom: 10px;
+    font-size: 42px;
+    margin-bottom: 10px;
 }
 
 .game-card h3 {
