--- a/slot.css
+++ b/slot.css
@@ -42,23 +42,24 @@ body {
 
 /* slots */
 .slots {
-  flex: 1;
   display: flex;
   justify-content: center;
-  align-items: center;
-  gap: 14px;
+  gap: 12px;
+  margin: 20px 0;
 }
 
 .slot {
-  width: 85px;
-  height: 85px;
+  width: 90px;
+  height: 90px;
   background: #111;
-  border-radius: 16px;
+  border-radius: 12px;
   border: 3px solid #444;
-  font-size: 46px;
   display: flex;
   align-items: center;
   justify-content: center;
+}
+.slot img {
+  width: 80%;
 }
 
 /* animações */
