--- a/lobby.css
+++ b/lobby.css
@@ -7,6 +7,7 @@
 }
 
 body {
+  min-height: 100vh;
   background-image: url("casino.png");
   background-size: 200%;
   background-repeat: no-repeat;
