--- a/slot.css
+++ b/slot.css
@@ -7,12 +7,7 @@ body {
   font-family: Arial, sans-serif;
   color: white;
 
-  background: 
-    linear-gradient(
-      rgba(0,0,0,0.65),
-      rgba(0,0,0,0.85)
-    ),
-    url("bg-casino.png");
+  background:linear-gradient(rgba(0,0,0,0.65),rgba(0,0,0,0.85)),url("coringa.jpg");
 
   background-size: cover;
   background-position: center;
