--- a/slot.css
+++ b/slot.css
@@ -16,6 +16,7 @@ body {
 }
 
 .container {
+   background:linear-gradient(rgba(0,0,0,0.65),rgba(0,0,0,0.85)),url("coringa.jpg");
   backdrop-filter: blur(4px);
   background: rgba(0,0,0,0.35);
   border-radius: 16px;
